@@ -5,6 +5,8 @@ TODO: http://stevehanov.ca/blog/index.php?id=104 compression
 4.21 2020-08-13 (rurban)
         - Fix not enough HEK memory allocation for the new canonical tied hashes
           feature. (GH #168)
+        - TODO broken JSON::PP::Boolean versions 2.9x - 4.0 with threads::shared in
+          125_shared_boolean.t
 
 4.20 2020-08-12 (rurban)
         - New feature: sort tied hashes with canonical. (GH #167)
